# p4_automatic_informations_classification

./: .gitignore  README.md  clugery_aurelien_1_part1_analyze.ipynb  clugery_aurelien_1_part2_cleaning.ipynb  clugery_aurelien_1_part2_training_cycle1.ipynb  clugery_aurelien_1_part2_training_cycle2.ipynb  clugery_aurelien_1_part2_training_cycle3.ipynb  clugery_aurelien_1_part2_training_cycle4.ipynb  clugery_aurelien_1_part2_training_cycle5.ipynb  clugery_aurelien_1_part2_training_cycle6.ipynb  clugery_aurelien_1_part2_training_cycle7.ipynb  clugery_aurelien_1_part3_feature_engineering.ipynb  clugery_aurelien_1_part4_training_cycle1.ipynb  clugery_aurelien_1_part4_training_cycle2.ipynb  clugery_aurelien_1_part4_training_cycle3.ipynb  clugery_aurelien_1_part4_training_cycle4.ipynb  clugery_aurelien_1_part4_training_cycle5.ipynb  clugery_aurelien_1_part4_training_cycle6.ipynb  clugery_aurelien_1_part4_training_cycle7.ipynb  correlations.ipynb  ideas.md  pyproject.toml  technova_correlation_cleaning.py  technova_features.py  utils.py
data/rafined/: employees.csv
